[HOPSWORKS-1347][HOPSWORKS-34] Modify Hudi to work with Hopsworks

--- a/hudi-spark/pom.xml
+++ b/hudi-spark/pom.xml
@@ -252,7 +252,7 @@
 
     <!-- Hadoop -->
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>${hadoop.groupid}</groupId>
       <artifactId>hadoop-client</artifactId>
       <exclusions>
         <exclusion>
@@ -263,7 +263,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>${hadoop.groupid}</groupId>
       <artifactId>hadoop-common</artifactId>
        <exclusions>
         <exclusion>
