--- a/packaging/hudi-spark-bundle/pom.xml
+++ b/packaging/hudi-spark-bundle/pom.xml
@@ -127,28 +127,28 @@
                   <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hive.jdbc.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hadoop.hive.metastore.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hadoop.hive.metastore.</shadedPattern>
+                  <pattern>${hive.groupid}.metastore.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.metastore.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hive.common.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hive.common.</shadedPattern>
+                  <pattern>${hive.groupid}.common.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.common.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hadoop.hive.common.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hadoop.hive.common.</shadedPattern>
+                  <pattern>${hive.groupid}.common.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.common.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hadoop.hive.conf.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hadoop.hive.conf.</shadedPattern>
+                  <pattern>${hive.groupid}.conf.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.conf.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hive.service.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hive.service.</shadedPattern>
+                  <pattern>${hive.groupid}.service.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.service.</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>org.apache.hadoop.hive.service.</pattern>
-                  <shadedPattern>${spark.bundle.hive.shade.prefix}org.apache.hadoop.hive.service.</shadedPattern>
+                  <pattern>${hive.groupid}.service.</pattern>
+                  <shadedPattern>${spark.bundle.hive.shade.prefix}${hive.groupid}.service.</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>com.codahale.metrics.</pattern>
