--- a/packaging/hudi-utilities-bundle/pom.xml
+++ b/packaging/hudi-utilities-bundle/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>hudi-utilities-bundle_${scala.binary.version}</artifactId>
+  <artifactId>hudi-utilities-bundle</artifactId>
   <packaging>jar</packaging>
 
   <properties>
