--- a/hudi-common/pom.xml
+++ b/hudi-common/pom.xml
@@ -135,6 +135,10 @@
           <groupId>javax.servlet</groupId>
           <artifactId>*</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>${hadoop.groupid}</groupId>
+          <artifactId>hadoop-annotations</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -209,7 +213,6 @@
       <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-server</artifactId>
       <version>${hbase.version}</version>
-      <!-- Unfortunately, HFile is packaged ONLY under hbase-server --> 
       <scope>compile</scope>
       <exclusions>
         <exclusion>
