--- a/hudi-sync/pom.xml
+++ b/hudi-sync/pom.xml
@@ -33,6 +33,7 @@
   <modules>
       <module>hudi-sync-common</module>
       <module>hudi-hive-sync</module>
-      <module>hudi-dla-sync</module>
+<!-- Not supporting Alibaba database -->
+<!--      <module>hudi-dla-sync</module> -->
   </modules>
 </project>
