--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
     <module>packaging/hudi-presto-bundle</module>
     <module>packaging/hudi-utilities-bundle</module>
     <module>packaging/hudi-timeline-server-bundle</module>
-    <module>docker/hoodie/hadoop</module>
+<!--    <module>docker/hoodie/hadoop</module>
     <module>hudi-integ-test</module>
-    <module>packaging/hudi-integ-test-bundle</module>
+    <module>packaging/hudi-integ-test-bundle</module>  -->
     <module>hudi-examples</module>
   </modules>
 
