--- a/packaging/hudi-timeline-server-bundle/pom.xml
+++ b/packaging/hudi-timeline-server-bundle/pom.xml
@@ -208,6 +208,14 @@
                       <include>log4j:log4j</include>
                   </includes>
                 </artifactSet>
+                <relocations>
+
+                    <relocation>
+                        <pattern>org.eclipse.jetty.</pattern>
+                        <shadedPattern>org.apache.hudi.org.apache.jetty.</shadedPattern>
+                    </relocation>
+                </relocations>
+
             </configuration>
             <executions>
                 <execution>
