--- a/hudi-spark/pom.xml
+++ b/hudi-spark/pom.xml
@@ -339,8 +339,8 @@
       <version>${hive.version}</version>
       <exclusions>
         <exclusion>
-          <groupId>org.eclipse.jetty.orbit</groupId>
-          <artifactId>javax.servlet</artifactId>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
